--- a/SB-Admin-Razor.csproj
+++ b/SB-Admin-Razor.csproj
@@ -7,9 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190625154824_EmployeeDatabaseMigration.cs" />
+    <Compile Remove="Migrations\20190625154824_EmployeeDatabaseMigration.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Pages\Logon\" />
   </ItemGroup>
 
 </Project>
