Identity Branch from main project. May merge in later.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection":"Server=DESKTOP-JKP5A53\\SQLEXPRESS;Database=HR;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=DESKTOP-JKP5A53\\SQLEXPRESS;Database=HR;Trusted_Connection=True;MultipleActiveResultSets=True",
+    "IdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SB-Admin-Razor;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
